# curs

./: .gitignore  Cargo.toml  README.md
src/: main.rs  test_menu.rs
