[package]
name = "snake_game"
version = "0.1.0"
edition = "2021"

[dependencies]
piston_window = "0.130.0"
ndarray = "0.15"
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
find_folder = "0.3.0"

[[bin]]
name = "snake_game"
path = "src/main.rs"


