[package]
name = "snake_game"
version = "0.1.0"
edition = "2021"

[dependencies]
piston_window = "0.130.0"
ndarray = "0.15"
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
find_folder = "0.3.0"
# Pin bincode to compatible version
bincode = { version = "1.3", optional = true }
burn = { version = "0.13", features = ["train", "wgpu"] }
burn-wgpu = "0.13"
candle-core = "0.6"
candle-nn = "0.6"

[features]
default = []
burn-ml = [ "bincode"]

[[bin]]
name = "snake_game"
path = "src/main.rs"

[[bin]]
name = "test_menu"
path = "src/test_menu.rs"
